--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "browserslist": "^4.21.9",
+    "caniuse-lite": "^1.0.30001503",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^7.6.15",
     "react": "^18.2.0",
